# gf2

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clang-format.sh  clang-tidy.sh  xmake.lua
.github/workflows/: build.yml  ubuntu.yml  windows.yml
cmake/: FindChipmunk.cmake
docs/: .gitignore  AnyCells.adoc  AnyGrid.adoc  Array2D.adoc  AudioListener.adoc  AudioManager.adoc  AudioSource.adoc  BasicScene.adoc  BasicSceneManager.adoc  BinaryHeap.adoc  Bitmap.adoc  BufferInputStream.adoc  BufferOutputStream.adoc  Camera.adoc  Circ.adoc  Clock.adoc  CodepointRange.adoc  Color.adoc  ColorMap.adoc  CompressedInputStream.adoc  CompressedOutputStream.adoc  Cursor.adoc  Deserializer.adoc  Entity.adoc  EntityContainer.adoc  Event.adoc  EventType.adoc  FileInputStream.adoc  FileLoader.adoc  FileOutputStream.adoc  FixedTimestepModel.adoc  Flags.adoc  Font.adoc  FontFace.adoc  FontManager.adoc  Gamepad.adoc  GamepadAxis.adoc  GamepadButton.adoc  GridCells.adoc  HexagonalCells.adoc  (+132 more)
docs/bits/: attributes.adoc
docs/snippets/: CMakeLists.txt  core_clock.cc  core_color.cc  core_id.cc  core_math.cc  core_ref.cc  core_resources.cc  core_result.cc  core_serialization.cc  core_time.cc  graphics_event.cc  graphics_scene_manager.cc  graphics_window.cc  manual_arch.cc  manual_resources.cc  network_socket_selector.cc  network_tcp_listener.cc  network_tcp_socket.cc  network_udp_socket.cc  xmake.lua
docs/tex/: .gitignore  Makefile  architecture.tex  crop-images.sh  grids.tex
examples/: 00-triangle.cc  01-colors.cc  01-rectangle.cc  02-image-blit.cc  02-texture.cc  03-camera.cc  04-render-texture.cc  05-sprite.cc  06-text.cc  07-animation.cc  10-sprite.cc  11-text.cc  12-animation.cc  13-shape.cc  14-curve.cc  15-imgui.cc  16-richtext.cc  17-console.cc  18-activities.cc  19-gridmap.cc  20-physics.cc  CMakeLists.txt  config.h.in  events.cc  hud.cc  ninepatch.cc  xmake.lua
games/HOME/: CMakeLists.txt  HOME.cc  config.h.in  xmake.lua
games/HOME/assets/map/: Map.tmx
games/HOME/bits/: BackpackEntity.cc  BackpackEntity.h  GameHub.cc  GameHub.h  HeroEntity.cc  HeroEntity.h  MapEntity.cc  MapEntity.h  PhysicsDebug.cc  PhysicsDebug.h  PhysicsRuntime.cc  PhysicsRuntime.h  ResourceHub.cc  ResourceHub.h  SplashData.cc  SplashData.h  SplashResources.cc  SplashResources.h  SplashScene.cc  SplashScene.h  SupplyEntity.cc  SupplyEntity.h  SupplyType.h  WorldData.cc  WorldData.h  WorldResources.cc  WorldResources.h  WorldScene.cc  WorldScene.h
include/gf2/: Anchor.h  AnyGrid.h  Array2D.h  AudioApi.h  AudioInitializer.h  AudioListener.h  AudioManager.h  AudioSource.h  AudioSpatialization.h  BinaryHeap.h  Bitmap.h  Buffer.h  Camera.h  CellTypes.h  Cells.h  Circ.h  Color.h  CommandBuffer.h  CoreApi.h  Descriptor.h  Direction.h  Event.h  Flags.h  Font.h  FontManager.h  Gamepad.h  GraphicsApi.h  GraphicsInitializer.h  Grid.h  GridMap.h  GridTypes.h  Grids.h  Id.h  Image.h  Initializer.h  Keyboard.h  Log.h  Mat3.h  Math.h  Mouse.h  (+53 more)
include/gf2/audio/: AudioApi.h  AudioListener.h  AudioManager.h  AudioSource.h  AudioSpatialization.h  Music.h  Sound.h
include/gf2/core/: Action.h  ActionData.h  ActionGroup.h  ActionSettings.h  Activities.h  Activity.h  AnimationData.h  AnyGrid.h  Array2D.h  AudioSourceData.h  BehaviorTree.h  BinPack.h  BinaryHeap.h  Bitmap.h  Blit.h  Camera.h  Circ.h  Clock.h  Color.h  ColorCompositing.h  ColorRamp.h  Console.h  ConsoleBuffer.h  ConsoleChar.h  ConsoleData.h  ConsoleEffect.h  ConsoleElement.h  ConsoleElementContainer.h  ConsoleEntity.h  ConsoleEntityContainer.h  ConsoleFontData.h  ConsoleFontResource.h  ConsoleOperations.h  ConsoleScene.h  ConsoleSceneManager.h  ConsoleStyle.h  Control.h  ControlData.h  ControlSettings.h  CoreApi.h  (+98 more)
include/gf2/framework/: BundleBuilder.h  ConsoleSystem.h  FrameworkApi.h  GraphicsPhysicsDebug.h  ResourceSystem.h  SceneSystem.h
include/gf2/graphics/: Action.h  ActionGroup.h  AnimatedSprite.h  AnimatedSpriteEntity.h  Animation.h  AnimationEntity.h  AnimationGroup.h  AnimationGroupEntity.h  AnimationRuntime.h  Buffer.h  BufferReference.h  Clipboard.h  CommandBuffer.h  Console.h  ConsoleEntity.h  ConsoleFont.h  ConsoleGraphics.h  ConsoleGraphicsEntity.h  Control.h  Cursor.h  Curve.h  CurveEntity.h  DebugEntity.h  Descriptor.h  Device.h  DynamicBuffer.h  Entity.h  EntityContainer.h  Event.h  Events.h  Font.h  FontAtlas.h  FontPack.h  Format.h  GamePaths.h  Gamepad.h  GpuBuffer.h  GpuCommandBuffer.h  GpuDevice.h  GpuDynamicBuffer.h  (+53 more)
include/gf2/imgui/: ImguiApi.h  ImguiEntity.h  ImguiInitializer.h  ImguiManager.h
include/gf2/network/: NetworkApi.h  NetworkInitializer.h  Packet.h  Queue.h  Socket.h  SocketAddress.h  SocketSelector.h  SocketTypes.h  TcpListener.h  TcpSocket.h  UdpSocket.h
include/gf2/physics/: PhysicsApi.h  PhysicsArbiter.h  PhysicsBody.h  PhysicsChain.h  PhysicsChainSegment.h  PhysicsCollisionHandler.h  PhysicsConstraint.h  PhysicsContact.h  PhysicsDebug.h  PhysicsEvents.h  PhysicsFilter.h  PhysicsHandle.h  PhysicsId.h  PhysicsJoint.h  PhysicsMassData.h  PhysicsOwner.h  PhysicsShape.h  PhysicsShapeEx.h  PhysicsSpace.h  PhysicsSurfaceMaterial.h  PhysicsTaskManager.h  PhysicsTransform.h  PhysicsWorld.h
tests/: CMakeLists.txt  config.h.in  main.cc  main_audio.cc  main_core.cc  main_network.cc  tarball_ls.cc  tests_audio_AudioManager.cc  tests_audio_Sound.cc  tests_core_Array2D.cc  tests_core_BehaviorTree.cc  tests_core_BinaryHeap.cc  tests_core_Color.cc  tests_core_Control.cc  tests_core_Data.cc  tests_core_Fixed.cc  tests_core_Flags.cc  tests_core_Grid.cc  tests_core_Id.cc  tests_core_Math.cc  tests_core_Move.cc  tests_core_Property.cc  tests_core_Range.cc  tests_core_Rational.cc  tests_core_Rect.cc  tests_core_Ref.cc  tests_core_Resource.cc  tests_core_Result.cc  tests_core_SecureHash.cc  tests_core_Serialization.cc  tests_core_Span.cc  tests_core_StringUtils.cc  tests_core_Vec2.cc  tests_core_Vec3.cc  tests_network_TcpSocket.cc  tests_network_UdpSocket.cc  xmake.lua
throwback/physics/include/: PhysicsBody.h  PhysicsCollisionHandler.h  PhysicsHandle.h  PhysicsId.h  (+2 more)
